--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
     <table cellspacing="30">
         <tr>
-            <td><img src="PICS1.jpg" alt="Adebunmi Personal Profile" srcset=""></td>
+            <td><img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?cs=srgb&dl=pexels-luis-gomes-546819.jpg&fm=jpg" alt="Adebunmi Personal Profile" srcset=""></td>
             <td><h1><strong> Adebunmi Habeeb Opeyemi</strong></h1>
-            <p> <em><strong>Founder of AB telecom NG LTD</strong></em></p>
-            <P>I am web deeveloper and i love Sport</P>
-            <p>I am hardworking and always try  to make anything i lay my hands on succesful</p></td>
+            <P>I am a Frontend developer and aspiring Data Scientist and i love Sport</P>
+            <p>I am hardworking and always try to make anything i lay my hands on succesful</p></td>
         </tr>
     </table>
     <hr>
