--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table cellspacing="30">
         <tr>
-            <td><img src="PICS1.jpg" alt="Adebunmi Personal Profile" srcset=""></td>
+            <td><img src="code2.png" alt="Adebunmi Personal Profile" srcset=""></td>
             <td><h1><strong> Adebunmi Habeeb Opeyemi</strong></h1>
             <P>I am a Frontend developer and aspiring Data Scientist and i love Sport</P>
             <p>I am hardworking and always try to make anything i lay my hands on succesful</p></td>
